fix popover UI display too large

--- a/common/styles/common.css
+++ b/common/styles/common.css
@@ -12,7 +12,6 @@ button {
   background-color: lightblue;
   border-radius: 5px;
   height: 30px;
-  width: 70px;
   font-size: 16px;
   cursor: pointer;
   outline: 0;
