--- a/pages/view-vocabulary/style.css
+++ b/pages/view-vocabulary/style.css
@@ -1,3 +1,7 @@
+button {
+  width: 70px;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
